--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@tarojs/async-await": "1.2.12",
+    "@tarojs/async-await": "^1.2.19",
     "@tarojs/components": "1.2.12",
     "@tarojs/redux": "1.2.12",
     "@tarojs/redux-h5": "1.2.12",
@@ -31,6 +31,7 @@
     "@tarojs/taro-swan": "1.2.12",
     "@tarojs/taro-tt": "1.2.12",
     "@tarojs/taro-weapp": "1.2.12",
+    "axios": "^0.18.0",
     "nerv-devtools": "^1.3.9",
     "nervjs": "^1.3.9",
     "redux": "^4.0.0",
