--- a/package.json
+++ b/package.json
@@ -32,15 +32,17 @@
     "@tarojs/taro-tt": "1.2.12",
     "@tarojs/taro-weapp": "1.2.12",
     "axios": "^0.18.0",
+    "html2canvas": "^1.0.0-alpha.12",
     "nerv-devtools": "^1.3.9",
     "nervjs": "^1.3.9",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "taro-plugin-canvas": "^1.0.3",
     "taro-ui": "^2.0.2"
   },
   "devDependencies": {
-    "@tarojs/plugin-babel": "1.2.12",
+    "@tarojs/plugin-babel": "^1.2.21",
     "@tarojs/plugin-csso": "1.2.12",
     "@tarojs/plugin-sass": "1.2.12",
     "@tarojs/plugin-uglifyjs": "1.2.12",
